[package]
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
name = "simpl_cache"
description = "Simple rust caching tools"
keywords = ["caching"]
license = "MIT"
readme = "./README.md"
version ="2.1.0-beta"

[workspace.package]
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
description = "Simple rust caching tools"
edition = "2021"
keywords = ["caching"]
repository = "https://github.com/collinsmuriuki/simple_cache"
readme = "./README.md"
license = "MIT"

[dependencies]
simple_cache_macros = "2.1.0-beta"
simple_cache_core = "1.0.0-beta"

[workspace]
members = [
    "core",
    "macros",
]
