[package]
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
name = "simpl_cache"
description = "Simple rust caching tools"
keywords = ["caching"]
license = "MIT"
readme = "./README.md"
version ="2.4.1-beta"
edition = "2021"

[workspace.package]
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
description = "Simple rust caching tools"
edition = "2021"
keywords = ["caching"]
repository = "https://github.com/collinsmuriuki/simple_cache"
readme = "./README.md"
license = "MIT"

[dependencies]
simple_cache_macros = {path = "./macros"}
simple_cache_core = {path = "./core"}
futures = "0.3.28"

[workspace]
members = [
    "core",
    "macros",
]
