[package]
name = "simple_cache_core"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
version = "1.0.0-beta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
