[package]
name = "simple_cache_macros"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "*"
proc-macro2="*"
syn = {version="*", features=["extra-traits", "full"]}
simple_cache_core={path="../core"}