[package]
name = "simple_cache_macros"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
version = "2.0.0-beta"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
quote = "1.0.32"
proc-macro2="1.0.66"
syn = {version="2.0.28", features=["extra-traits", "full"]}
simple_cache_core={version = "1.0.0-beta", path="../core"}